fix border on firefox

--- a/fe/day-2/tasks/stylesheets/style.css
+++ b/fe/day-2/tasks/stylesheets/style.css
@@ -9,3 +9,8 @@ section {
 .list-about {
   list-style-type: "-";
 }
+
+svg {
+  position: relative;
+  top: 1px;
+}
